@@ -1,3 +1,5 @@
+* Define how inventory non filled lines are managed
+* Do not fill inventory quantity automatically
 * Assign supplier return shipment using children when location is a view
 * Duplicate "Locations Quantity" into tree and list
 * Remove product_ids from products_by_location for grouping_filter
